--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1>I am Michael</h1>
 <h2>a web designer </h2>
 <img  class="bottom-cloud" src="images/cloud.png" alt="cloud image">
-<img src="./images/mountain.png" alt="mountain image">
+<img src="/images/mountain.png" alt="mountain image">
 </div>
 <div class="middle-container">
   <div class="profile">
